--- a/popup/popup.html
+++ b/popup/popup.html
@@ -8,6 +8,9 @@
             <button id="loadContentButton">Load Content</button>
             <ul class="contactDetails">
             </ul>
+            <button id="saveContentButton">Save Content</button>
+            <button id="loadLocalContentButton">Load Local Content</button>
+
         </div>
         <script src="popup.js"></script>
     </body>
